-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 8, 11, 17, 18, 19, 20
-
Component/s: hotspot
-
b15
-
Verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8294447 | 19.0.2 | Tobias Hartmann | P2 | Closed | Fixed | b02 |
| JDK-8294178 | 17.0.6-oracle | Tobias Hartmann | P2 | Closed | Fixed | b01 |
| JDK-8294828 | 17.0.6 | Goetz Lindenmaier | P2 | Resolved | Fixed | b01 |
| JDK-8296297 | 15.0.10 | Yuri Nesterenko | P2 | Resolved | Fixed | b02 |
| JDK-8296298 | 13.0.14 | Yuri Nesterenko | P2 | Resolved | Fixed | b02 |
| JDK-8294127 | 11.0.18-oracle | Tobias Hartmann | P2 | Closed | Fixed | b01 |
| JDK-8295054 | 11.0.18 | Goetz Lindenmaier | P2 | Resolved | Fixed | b01 |
- backported by
-
JDK-8294828 C1: Missing access check on non-accessible class
-
- Resolved
-
-
JDK-8295054 C1: Missing access check on non-accessible class
-
- Resolved
-
-
JDK-8296297 C1: Missing access check on non-accessible class
-
- Resolved
-
-
JDK-8296298 C1: Missing access check on non-accessible class
-
- Resolved
-
-
JDK-8294127 C1: Missing access check on non-accessible class
-
- Closed
-
-
JDK-8294178 C1: Missing access check on non-accessible class
-
- Closed
-
-
JDK-8294447 C1: Missing access check on non-accessible class
-
- Closed
-
- relates to
-
JDK-8293816 CI: ciBytecodeStream::get_klass() is not consistent
-
- Resolved
-
- links to
-
Commit
openjdk/jdk11u-dev/3622c42c
-
Commit
openjdk/jdk13u-dev/374bf7f8
-
Commit
openjdk/jdk15u-dev/6790a065
-
Commit
openjdk/jdk17u-dev/6882bd36
-
Commit
openjdk/jdk19u/6b9fe5db
-
Commit
openjdk/jdk/005b49bb
-
Review
openjdk/jdk11u-dev/1384
-
Review
openjdk/jdk13u-dev/425
-
Review
openjdk/jdk15u-dev/299
-
Review
openjdk/jdk17u-dev/768
-
Review
openjdk/jdk19u/30
-
Review(master)
openjdk/jdk/10222