8293044: C1: Missing access check on non-accessible class

Backport-of: 005b49bb78a468d4e372e6f5fa48bb0db4fd73c2